--- a/yes_style.css
+++ b/yes_style.css
@@ -2,10 +2,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 250vh;
+    height: 150vh;
     background-image: url("IMG_6118.jpg");
-    background-size: cover;
-    
+   
+    background-size:contain;
   background-position: center;
 
    
