--- a/yes_style.css
+++ b/yes_style.css
@@ -26,3 +26,22 @@ body {
     justify-content: center;
     align-items: center;
 }
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+    body {
+        height: 100vh;
+    }
+
+    .header_text {
+        font-size: 20px;
+    }
+
+    img {
+        height: 60vh;
+    }
+
+    .btn {
+        padding: 10px 18px;
+        font-size: 12px;
+    }
+}
+
